--- a/docker/postfix/app/flask_app/translations/en/LC_MESSAGES/messages.po
+++ b/docker/postfix/app/flask_app/translations/en/LC_MESSAGES/messages.po
@@ -400,3 +400,7 @@ msgstr "Please fill the same passwords"
 #: templates/index.html:25
 msgid "Entrer votre mail"
 msgstr "Enter mail"
+
+#: templates/index.html:25
+msgid "Mauvais mot de passe"
+msgstr "Wrong Password"
